--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,16 @@ code {
 textarea:focus {
   outline: none !important;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 1px 1px;
+  grid-template-areas:
+    ". . . ."
+    ". . . ."
+    ". . . .";
+  width: 100%;
+  margin: 0 auto;
+}
